Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <form>
 
-      <input type="text" name="owner-name">
+      <label type="text" name="fullname">
 
       <!-- Add a label for 'fullname'-->
 
