--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <form>
 
-      <input type="text" name="fullname">
+      <input type="text" id="fullname" placeholder="Enter Name">
 
       <!-- Add a label for 'fullname'-->
 
