Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <form>
 
       <input type="text" id="fullname" placeholder="Enter Name">
-
+      
+      <input type="email" id="email" placeholder="Enter Name">
 
 
       <!-- Add a label for 'email'-->
