--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <input type="text" id="fullname" placeholder="Enter Name">
       
-      <input type="email" id="email" placeholder="Enter Email">
+      <input type="email" id="email" placeholder="Enter Email" required>
 
 
       <!-- Add a label for 'email'-->
