--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       
       <input type="email" id="email" placeholder="Enter Email" required>
 
+      <input id="tel" type="tel" name="phone" placeholder="Phone Number">
 
 
 
