--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       
       <input type="email" id="email" placeholder="Enter Email" required>
 
-      <input type="tel" id="phone" placeholder="Phone Number">
+      <input type="tel" id="phone" placeholder="Enter Telephone (optional)">
 
 
 
