--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <input type="tel" id="phone" placeholder="Enter Telephone (optional)">
 
 
+      <label for="password">What's the password?</label>
+      <label for="password">What's the password?</label>
+      <label for="password">What's the password?</label>
 
 
       <!-- Add a label for 'message'-->
