--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <label for="password">What's the password?</label>
       <label for="password">What's the password?</label>
       <label for="password">What's the password?</label>
+      <label for="password">What's the password?</label>
 
 
       <!-- Add a label for 'message'-->
