--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <input type="tel" id="phone" placeholder="Enter Telephone (optional)">
 
 
-      <label for="password">What's the password?</label>
-      <label for="password">What's the password?</label>
+      <label for="fullname">What's the password?</label>
+      <label for="email">What's the password?</label>
       <label for="password">What's the password?</label>
       <label for="password">What's the password?</label>
 
