--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <label for="fullname">What's the password?</label>
       <label for="email">What's the password?</label>
-      <label for="password">What's the password?</label>
+      <label for="phone">What's the password?</label>
       <label for="password">What's the password?</label>
 
 
