Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <label for="fullname">What's the password?</label>
       <label for="email">What's the password?</label>
       <label for="phone">What's the password?</label>
-      <label for="password">What's the password?</label>
+      <label for="message">What's the password?</label>
 
 
       <!-- Add a label for 'message'-->
