Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <input type="tel" id="phone" placeholder="Enter Telephone (optional)">
 
 
-      <label for="fullname">What's the password?</label>
-      <label for="email">What's the password?</label>
-      <label for="phone">What's the password?</label>
-      <label for="message">What's the password?</label>
+      <label for="fullname">What's the fullname?</label>
+      <label for="email">What's the email?</label>
+      <label for="phone">What's the phone?</label>
+      <label for="message">What's the message?</label>
 
 
       <!-- Add a label for 'message'-->
