Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <label for="phone">What's the phone?</label>
       <label for="message">What's the message?</label>
 
+      <textarea id="message"></textarea>
 
       <!-- Add a label for 'message'-->
 
