--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <label for="phone">What's the phone?</label>
       <label for="message">What's the message?</label>
 
-      <textarea id="message" placeholder = >Enter Message</textarea>
+      <textarea id="message" placeholder = "Enter Message"></textarea>
 
       <!-- Add a label for 'message'-->
 
