Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
       <textarea id="message" placeholder = "Enter Message"></textarea>
 
+      <input type="checkbox" id="checkbox" value="kong"> Kong <br>
+
       <!-- Add a label for 'message'-->
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
