--- a/index.html
+++ b/index.html
@@ -28,17 +28,7 @@
 
       <input type="checkbox" id="checkbox" value="kong"> Kong <br>
 
-      <!-- Add a label for 'message'-->
-
-      <!-- Add a textarea tag with the id and name attributes set to 'message' -->
-      <!-- Include the place holder text "Enter Message" -->
-
-
-      <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
-
-      <!-- Add an input with the type set to 'submit' -->
+      <input type="submit" value="Let me walk your dog!">
 
   </form>
   </body>
